--- a/002/style.css
+++ b/002/style.css
@@ -1,10 +1,13 @@
-.header {
-  background: forestgreen;
+* {
+  box-sizing: border-box;
 }
-.header__title {
-  font-size: 40px;
-  margin-bottom: 10px;
-  padding-top: 10px;
+
+.form-control {
+  margin-bottom: 20px;
+}
+
+span {
+  color: orangered;
 }
 
 /*# sourceMappingURL=style.css.map */
