--- a/002/style.scss
+++ b/002/style.scss
@@ -1,8 +1,11 @@
-.header {
-  background: forestgreen;
-  &__title {
-    font-size: 40px;
-    margin-bottom: 10px;
-    padding-top: 10px;
-  }
+* {
+  box-sizing: border-box;
+
+}
+.form-control {
+  margin-bottom: 20px;
+}
+
+span {
+  color: orangered;
 }
