--- a/002/theme.css
+++ b/002/theme.css
@@ -11,6 +11,8 @@ body {
   font-size: 16px;
   color: #2c3e50;
   background: #2c3e50;
+
+  height: 100vh;
 }
 
 hr {
@@ -108,7 +110,7 @@ h3 {
 }
 
 .container {
-  margin: 0 auto;
+  margin: 120px auto 0;
   max-width: 1000px;
 }
 
